# ONUrganizerBot

./: .dockerignore  .gitignore  .uvrc  Dockerfile  LICENCE  README.md  docker-compose.yaml  pyproject.toml  schedule.py
bot/: bot.py  config.py  handlers.py  run.py
bot/app/: builders.py  handlers.py  keyboards.py  resources.py  routers.py
bot/app/handlers/: cat_handlers.py  schedule_handlers.py
bot/app/utils/: helpers.py
bot/models/: models.py
bot/resources/: days_id.json  search_prompts.json  translations.py
gsheetsAPI/: run.py
telebot/: bot.py
