[tool.poetry]
name = "onurganizerbot"
version = "0.1.0"
description = "This is the ONUrganizerBot - the Telegram bot to facilitate your everyday chores in ONU"
authors = ["ihorlenko", "maelys"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
aiogram = "^3.12.0"
pyyaml = "^6.0.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
