[project]
name = "onurganizerbot"
version = "0.1.0"
description = "This is the ONUrganizerBot - the Telegram bot to facilitate your everyday chores in ONU"
authors = [
    {name = "ihorlenko"},
    {name = "maelys"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "aiogram>=3.12.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
]
